# Python-Kumasi-Events-Email-Automator

./: README.md  manage.py  pyproject.toml
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_event_options_remove_event_date_and_more.py
events_email_automator/: asgi.py  settings.py  urls.py  wsgi.py
registration/: forms.py  models.py  urls.py  views.py
templates/: base.html
templates/core/: create_event.html  edit_event.html  email_attendees.txt  event_detail.html  index.html  upload_csv_file.html
templates/registration/: login.html  signup.html
